--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-# src/main/resources/application.yml
 spring:
   application:
     name: badminton-booking-system
@@ -6,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/badminton_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: root
-    password: your_password
+    password: Hoangthanhhong76543@
     driver-class-name: com.mysql.cj.jdbc.Driver
   
   jpa:
